--- a/edge_reward_wizard_cli/Configs.json
+++ b/edge_reward_wizard_cli/Configs.json
@@ -1,3 +1,8 @@
 {
-    "waiting_time" : 10
+    "waiting_time" : 10,
+    "urls" : {
+        "Code Devil's home page" : "https://codedevil.me",
+        "Google" : "https://google.com"
+
+    }
 }
